--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 			<div class="row">
 				<div class="col-lg-12 open_shop">
 					<h3>Открой магазин и окупи его за 6 месяцев</h3>
-						<span>Бизнес по продаже ювелирных изделий из серебра</span>
+					<span>Бизнес по продаже ювелирных изделий из серебра</span>
 				</div>
 				<div class="col-lg-5 offset-lg-7">
 					<div class="form_border">
 						<form action="" class="form_presentation" id="form-order1">
 							<h3 class="form_header">оставьте заявку</h3>
-							<p class="form_text">и получите<br>
+							<p class="form_text">и получите<br/>
 							полную презентацию проекта и консультацию специалиста</p>
 							<p class="form_field"><input type="text" placeholder="Ваше имя"><i class="fas fa-user-alt"></i></p>
 							<p class="form_field"><input type="text" placeholder="Ваш телефон"><i class="fas fa-phone"></i></p>
@@ -385,13 +385,16 @@
 								<p class="form_text">получите <span>бесплатную</span><br>
 								<span>консультацию</span> специалиста</p>
 								<p class="form_field">
-									<input type="text" placeholder="Ваше имя"><i class="fas fa-user-alt"></i>
+									<input type="text" placeholder="Ваше имя">
+									<i class="fas fa-user-alt"></i>
 								</p>
 								<p class="form_field">
-									<input type="text" placeholder="Ваш телефон"><i class="fas fa-phone"></i>
+									<input type="text" placeholder="Ваш телефон">
+									<i class="fas fa-phone"></i>
 								</p>
 								<p class="form_field">
-									<input type="email" placeholder="Ваш e-mail"><i class="fas fa-envelope"></i>
+									<input type="email" placeholder="Ваш e-mail">
+									<i class="fas fa-envelope"></i>
 								</p>
 								<p><input type="submit" value="получить косультацию"></p>
 								<p><input type="hidden" name="form" value="form-order2"></p>
@@ -446,33 +449,44 @@
 			<div class="container">
 				<h2>всего несколько шагов к процветанию</h2>
 				<div class="row no-gutters">
-					<div class="step_item"> <!--col-lg-2-->
-						<div class="step_picture"><img src="img/zayavka.png" alt="order-picture"></div><!-- class="order"-->
+					<div class="step_item">
+						<div class="step_picture">
+							<img src="img/zayavka.png" alt="order-picture">
+						</div>
 						<span>ваша заявка</span>
 						<button>Оставить заявку</button>
 						<div class="dashed-line-left"></div>
 					</div>
-					<div class="step_item"> <!--col-lg-2 offset-lg-2-->
-						<!-- <div class="step_dashed"><img src="img/line-dashedright.png" alt="dashed-line"></div> -->
-						<div class="step_picture"><img src="img/details.png" alt="details"></div>
+					<div class="step_item">
+						<div class="step_picture">
+							<img src="img/details.png" alt="details">
+						</div>
 						<span>обсуждение деталей</span>
 					</div>
-					<div class="step_item"> <!--col-lg-2 offset-lg-2-->
-						<div class="step_picture"><img src="img/dogovor.png" alt="dogovor"></div>
+					<div class="step_item">
+						<div class="step_picture">
+							<img src="img/dogovor.png" alt="dogovor">
+						</div>
 						<span>договор</span>
 						<div class="dashed-line-left"></div>
 					</div>
-					<div class="step_item"> <!--col-lg-2 offset-lg-2-->
-						<div class="step_picture"><img src="img/shop.png" alt="shop"></div>
+					<div class="step_item">
+						<div class="step_picture">
+							<img src="img/shop.png" alt="shop">
+						</div>
 						<span>открытие магазина под ключ</span>
 					</div>
-					<div class="step_item"> <!--col-lg-2 offset-lg-2-->
-						<div class="step_picture"><img src="img/cash.png" alt="cash"></div>
+					<div class="step_item">
+						<div class="step_picture">
+							<img src="img/cash.png" alt="cash">
+						</div>
 						<span>прибыль</span>
 						<div class="dashed-line-left"></div>
 					</div>
-					<div class="step_item"> <!--col-lg-2 offset-lg-2-->
-						<div class="step_picture"><img src="img/support.png" alt="support"></div>
+					<div class="step_item">
+						<div class="step_picture">
+							<img src="img/support.png" alt="support">
+						</div>
 						<span>круглосуточная поддержка по всем вопросам</span>
 					</div>
 				</div>
@@ -510,15 +524,15 @@
 						</div>
 						<div class="col-lg-6 col-md-12">
 							<div class="form_border">
-								<form action="" class="form_presentation">
+								<form class="form_presentation">
 									<h3 class="form_header">оставьте заявку</h3>
 									<p class="form_text">для более детального<br>
 									<span>обсуждения проекта</span></p>
 									<p class="form_field"><input type="text" placeholder="Ваше имя"><i class="fas fa-user-alt"></i></p>
-								<p class="form_field"><input type="text" placeholder="Ваш телефон"><i class="fas fa-phone"></i></p>
-								<p class="form_field"><input type="email" placeholder="Ваш e-mail"><i class="fas fa-envelope"></i></p>
-								<p><input type="submit" value="узнать стоимость"></p>
-								<p><input type="hidden" name="form" id="form-order3"></p>
+									<p class="form_field"><input type="text" placeholder="Ваш телефон"><i class="fas fa-phone"></i></p>
+									<p class="form_field"><input type="email" placeholder="Ваш e-mail"><i class="fas fa-envelope"></i></p>
+									<p><input type="submit" value="узнать стоимость"></p>
+									<p><input type="hidden" name="form" id="form-order3"></p>
 								</form>
 							</div>
 						</div>
