--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Assos</title>
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Scada:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Scada:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<section class="container box">
+	<div class="container box">
 		<div class="row">
-			<div class="col-lg-2 assos">
-				<h1>assos</h1>
-			</div>
+			<div class="col-lg-2 assos">assos</div>
 			<div class="col-lg-3 offset-lg-2 franshiza">
 				<span>Франшиза от сети Ювелирных изделий ASSOS</span>
 			</div>
@@ -25,7 +23,7 @@
 				<button>Заказать обратный звонок</button>
 			</div>
 		</div>
-	</section>
+	</div>
 	<section class="container-fluid header_block">
 		<div class="container box">
 			<div class="row">
@@ -35,7 +33,7 @@
 				</div>
 				<div class="col-lg-5 offset-lg-7">
 					<div class="form_border">
-						<form action="" class="form_presentation" id="form-order1">
+						<form class="form_presentation">
 							<h3 class="form_header">оставьте заявку</h3>
 							<p class="form_text">и получите<br/>
 							полную презентацию проекта и консультацию специалиста</p>
@@ -68,146 +66,147 @@
 							</div>
 						</div>
 					</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_picture">
-							<img src="img/help-speak.png" alt="help-speak">
-							<div class="include_icon">
-								<img src="img/Agree.png" alt="agree-icon">
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_picture">
+								<img src="img/help-speak.png" alt="help-speak">
+								<div class="include_icon">
+									<img src="img/Agree.png" alt="agree-icon">
+								</div>
 							</div>
-						</div>
-						<div class="include_text">
-							<p>Помощь в проведении переговоров с арендодателем</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_text">
-							<p>Дизайн-проект Вашего магазина</p>
-						</div>
-						<div class="include_picture">
-							<img src="img/help-design.png" alt="help">
-							<div class="include_icon">
-								<img src="img/Design.png" alt="design-icon">
+							<div class="include_text">
+								<p>Помощь в проведении переговоров с арендодателем</p>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_picture">
-							<img src="img/help-equipment.png" alt="help">
-							<div class="include_icon">
-								<img src="img/Organized.png" alt="organized-icon">
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_text">
+								<p>Дизайн-проект Вашего магазина</p>
 							</div>
-						</div>
-						<div class="include_text">
-							<p>Централизованные закупки оборудования у наших поставщиков</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_text">
-							<p>Обучение и тренинги для Ваших сотрудников</p>
-						</div>
-						<div class="include_picture">
-							<img src="img/help-study.png" alt="help-study">
-							<div class="include_icon">
-								<img src="img/Tie.png" alt="tie-icon">
+							<div class="include_picture">
+								<img src="img/help-design.png" alt="help">
+								<div class="include_icon">
+									<img src="img/Design.png" alt="design-icon">
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_picture">
-							<img src="img/help-creation.png" alt="help-creation">
-							<div class="include_icon">
-								<img src="img/Puzzle.png" alt="puzzle-icon">
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_picture">
+								<img src="img/help-equipment.png" alt="help">
+								<div class="include_icon">
+									<img src="img/Organized.png" alt="organized-icon">
+								</div>
 							</div>
-						</div>
-						<div class="include_text">
-							<p>Помощь в разработке ассортиментной матрицы при открытии магазина</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_text">
-							<p>Обучение и тренинги для Ваших сотрудников</p>
-						</div>
-						<div class="include_picture">
-							<img src="img/new-collection.png" alt="new-collection">
-							<div class="include_icon">
-								<img src="img/Calendar.png" alt="calendar-icon">
+							<div class="include_text">
+								<p>Централизованные закупки оборудования у наших поставщиков</p>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_picture">
-							<img src="img/merchendazing.png" alt="merchendazing">
-							<div class="include_icon">
-								<img src="img/Puzzle.png" alt="puzzle-icon">
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_text">
+								<p>Обучение и тренинги для Ваших сотрудников</p>
 							</div>
-						</div>
-						<div class="include_text">
-							<p>Помощь в разработке ассортиментной матрицы при открытии магазина</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_text">
-							<p>Обучение и тренинги для Ваших сотрудников</p>
-						</div>
-						<div class="include_picture">
-							<img src="img/transfer.png" alt="transfer">
-							<div class="include_icon">
-								<img src="img/Transport.png" alt="transport-icon">
+							<div class="include_picture">
+								<img src="img/help-study.png" alt="help-study">
+								<div class="include_icon">
+									<img src="img/Tie.png" alt="tie-icon">
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_picture">
-							<img src="img/manager-girl.png" alt="manager">
-							<div class="include_icon">
-								<img src="img/Manager.png" alt="manager-icon">
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_picture">
+								<img src="img/help-creation.png" alt="help-creation">
+								<div class="include_icon">
+									<img src="img/Puzzle.png" alt="puzzle-icon">
+								</div>
 							</div>
-						</div>
-						<div class="include_text">
-							<p>Помощь в разработке ассортиментной матрицы при открытии магазина</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_text">
-							<p>Обучение и тренинги для Ваших сотрудников</p>
-						</div>
-						<div class="include_picture">
-							<img src="img/consulting.png" alt="consulting">
-							<div class="include_icon">
-								<img src="img/Network.png" alt="network-icon">
+							<div class="include_text">
+								<p>Помощь в разработке ассортиментной матрицы при открытии магазина</p>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-10 offset-lg-1 franchise_include">
-					<div class="include_block">
-						<div class="include_picture">
-							<img src="img/models.png" alt="models">
-							<div class="include_icon">
-								<img src="img/Print.png" alt="print-icon">
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_text">
+								<p>Обучение и тренинги для Ваших сотрудников</p>
+							</div>
+							<div class="include_picture">
+								<img src="img/new-collection.png" alt="new-collection">
+								<div class="include_icon">
+									<img src="img/Calendar.png" alt="calendar-icon">
+								</div>
 							</div>
 						</div>
-						<div class="include_text">
-							<p>Помощь в разработке ассортиментной матрицы при открытии магазина</p>
+					</div>
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_picture">
+								<img src="img/merchendazing.png" alt="merchendazing">
+								<div class="include_icon">
+									<img src="img/Puzzle.png" alt="puzzle-icon">
+								</div>
+							</div>
+							<div class="include_text">
+								<p>Помощь в разработке ассортиментной матрицы при открытии магазина</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_text">
+								<p>Обучение и тренинги для Ваших сотрудников</p>
+							</div>
+							<div class="include_picture">
+								<img src="img/transfer.png" alt="transfer">
+								<div class="include_icon">
+									<img src="img/Transport.png" alt="transport-icon">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_picture">
+								<img src="img/manager-girl.png" alt="manager">
+								<div class="include_icon">
+									<img src="img/Manager.png" alt="manager-icon">
+								</div>
+							</div>
+							<div class="include_text">
+								<p>Помощь в разработке ассортиментной матрицы при открытии магазина</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_text">
+								<p>Обучение и тренинги для Ваших сотрудников</p>
+							</div>
+							<div class="include_picture">
+								<img src="img/consulting.png" alt="consulting">
+								<div class="include_icon">
+									<img src="img/Network.png" alt="network-icon">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-10 offset-lg-1 franchise_include">
+						<div class="include_block">
+							<div class="include_picture">
+								<img src="img/models.png" alt="models">
+								<div class="include_icon">
+									<img src="img/Print.png" alt="print-icon">
+								</div>
+							</div>
+							<div class="include_text">
+								<p>Помощь в разработке ассортиментной матрицы при открытии магазина</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -380,7 +379,7 @@
 					</div>
 					<div class="col-lg-6">
 						<div class="form_border">
-							<form action="" class="form_presentation">
+							<form class="form_presentation">
 								<h3 class="form_header">оставьте заявку</h3>
 								<p class="form_text">получите <span>бесплатную</span><br>
 								<span>консультацию</span> специалиста</p>
@@ -397,7 +396,7 @@
 									<i class="fas fa-envelope"></i>
 								</p>
 								<p><input type="submit" value="получить косультацию"></p>
-								<p><input type="hidden" name="form" value="form-order2"></p>
+								<p><input type="hidden" name="form" id="form-order2"></p>
 							</form>
 							<div class="diamonds_picture">
 								<img src="img/diamonds.png" alt="diamonds">
@@ -440,6 +439,7 @@
 								<span>разных</span>изделий
 							</div>
 						</div>
+					</div>
 				</div>
 			</div>
 		</div>
